kubernetes/erpnext15/ingress.yaml
---
# Source: erpnext/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-erpnext
  labels:
    helm.sh/chart: erpnext-7.0.115
    app.kubernetes.io/name: erpnext
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v15.36.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: finkash
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - "cloud.finkash.co.za"
      secretName: skm-server-tls
  rules:
    - host: "cloud.finkash.co.za"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-erpnext
                port:
                  number: 8080
